--- a/tool/templates/static_rust/function.rs.jinja
+++ b/tool/templates/static_rust/function.rs.jinja
@@ -1,3 +1,9 @@
+{%- block function_impl -%}
 fn {{name}}() {
     unsafe { {{abi_name}}() }
 }
+{%- endblock -%}
+
+{%- block function_def -%}
+    fn {{abi_name}}();
+{%- endblock -%}
