Add module importing

--- a/tool/templates/static_rust/base.rs.jinja
+++ b/tool/templates/static_rust/base.rs.jinja
@@ -14,7 +14,7 @@ impl {{struct_name}} {
 }
 
 #[link(name = "{{lib_name}}")]
-extern "C" {
+unsafe extern "C" {
 {%- for m in methods %}
     {{ m.as_function_def()|indent(4) }}
 {% endfor %}
