--- a/tool/templates/static_rust/opaque.rs.jinja
+++ b/tool/templates/static_rust/opaque.rs.jinja
@@ -1,8 +1,5 @@
 {% extends "base.rs.jinja" %}
 
 {%- block type_def -%}
-#[repr(C)]
-pub struct {{type_name}} {
-
-}
+pub struct {{type_name}};
 {%- endblock %}
