--- a/tool/templates/static_rust/enum.rs.jinja
+++ b/tool/templates/static_rust/enum.rs.jinja
@@ -1,6 +1,7 @@
 {% extends "base.rs.jinja" %}
 
 {%- block type_def -%}
+#[repr(C)]
 pub enum {{type_name}} {
 {%- for variant in variants %}
     {{variant}} {%- if !loop.last -%}, {% endif -%}
