--- a/tool/templates/shared_rust/struct.rs.jinja
+++ b/tool/templates/shared_rust/struct.rs.jinja
@@ -2,7 +2,7 @@
 
 {%- block type_def -%}
 #[repr(C)]
-pub {%- if is_out -%}(super){%- endif %} struct {{type_name}} {% if fields.len() > 0 -%} {
+pub {%- if is_out -%}(super){%- endif %} struct {{type_name}} {%- if fields.len() > 0 %} {
     {%- for f in fields %}
     pub {{f.name}}: {{f.type_name}},
     {%- endfor %}
