Draft dropping for opaques

--- a/tool/templates/shared_rust/opaque.rs.jinja
+++ b/tool/templates/shared_rust/opaque.rs.jinja
@@ -2,4 +2,10 @@
 
 {%- block type_def -%}
 pub struct {{type_name}};
+
+impl Drop for {{type_name}} {
+    fn drop(&mut self) {
+        unsafe { {{type_name}}_destroy(self) }
+    }
+}
 {%- endblock %}
