--- a/tool/templates/shared_rust/base.rs.jinja
+++ b/tool/templates/shared_rust/base.rs.jinja
@@ -16,4 +16,6 @@ unsafe extern "C" {
 {%- for m in methods %}
     {{ m.as_function_def()|indent(4) }}
 {% endfor %}
+{%- block abi_methods -%}
+{%- endblock -%}
 }
