--- a/tool/templates/shared_rust/opaque.rs.jinja
+++ b/tool/templates/shared_rust/opaque.rs.jinja
@@ -11,5 +11,5 @@ impl Drop for {{type_name}} {
 {%- endblock %}
 
 {%- block abi_methods %}
-    fn {{type_name}}_destroy(this : *mut {{type_name}});
+    fn {{dtor_abi}}(this : *mut {{type_name}});
 {% endblock -%}
