--- a/tool/templates/shared_rust/opaque.rs.jinja
+++ b/tool/templates/shared_rust/opaque.rs.jinja
@@ -5,7 +5,7 @@ pub struct {{type_name}};
 
 impl Drop for {{type_name}} {
     fn drop(&mut self) {
-        unsafe { {{type_name}}_destroy(self) }
+        unsafe { {{dtor_abi}}(self) }
     }
 }
 {%- endblock %}
