Free write after use

--- a/tool/templates/shared_rust/function.rs.jinja
+++ b/tool/templates/shared_rust/function.rs.jinja
@@ -39,6 +39,11 @@ pub fn {{name}}(
             panic!("Could not read buffer, growth failed.")
         }
     };
+    
+    // Drop the write object, since we no longer need it:
+    unsafe {
+        drop(Box::from_raw(write))
+    }
 
     {%- if !is_infallible %}
     // TODO: Check DiplomatOption with this method.
