Ignore improper typing warnings

--- a/tool/templates/shared_rust/base.rs.jinja
+++ b/tool/templates/shared_rust/base.rs.jinja
@@ -12,6 +12,8 @@ impl {{type_name}} {
 }
 
 #[link(name = "{{lib_name}}")]
+{#- Opaques generate warnings: #}
+#[allow(improper_ctypes)]
 unsafe extern "C" {
 {%- for m in methods %}
     {{ m.as_function_def()|indent(4) }}
