--- a/tool/templates/shared_rust/base.rs.jinja
+++ b/tool/templates/shared_rust/base.rs.jinja
@@ -5,7 +5,7 @@ use super::{{i}};
 {%- block type_def -%}
 {%- endblock %}
 
-impl {{type_name}} {
+impl {%- block impl_generics -%}{%- endblock %} {{type_name}} {%- block impl_generics -%}{%- endblock %} {
 {%- for m in methods %}
     {{ m.as_function_impl()|indent(4) }}
 {% endfor %}
