--- a/tool/templates/shared_rust/function.rs.jinja
+++ b/tool/templates/shared_rust/function.rs.jinja
@@ -7,7 +7,7 @@
 {%- endmacro -%}
 
 {%- block function_impl -%}
-pub fn {{name}}(
+pub fn {{name}}{{self.render_generic_lifetimes()}}(
         {%- if is_write -%}
         {%- call func_params(self_param, &params[..params.len() - 1]) -%}
         {%- else -%}
@@ -51,7 +51,7 @@ pub fn {{name}}(
 {%- endblock -%}
 
 {%- block function_def -%}
-    fn {{abi_name}}(
+    fn {{abi_name}}{{self.render_generic_lifetimes()}}(
         {%- call func_params(self_param, params, true) -%}
     ) 
         
