--- a/tool/templates/shared_rust/opaque.rs.jinja
+++ b/tool/templates/shared_rust/opaque.rs.jinja
@@ -2,7 +2,7 @@
 
 {%- block type_def -%}
 {%- let lifetimes = self.lifetime_env.all_lifetimes().collect::<Vec<_>>() -%}
-use std::marker::PhantomData;
+{%- if lifetimes.len() > 0 -%} use std::marker::PhantomData; {%- endif %}
 
 pub struct {{type_name}}{{self.render_generic_lifetimes()}} {%- if lifetimes.len() > 0 %} {
     {%- for lt in lifetimes %}
