Add struct ABI conversion

--- a/tool/templates/shared_rust/struct.rs.jinja
+++ b/tool/templates/shared_rust/struct.rs.jinja
@@ -8,7 +8,6 @@
 {%- endmacro -%}
 
 {%- block type_def -%}
-#[repr(C)]
 pub {%- if is_out -%}(super){%- endif %} struct {{type_name -}}
 
 {%- call draw_formatted_lifetimes(lifetimes) -%}
@@ -17,7 +16,24 @@ pub {%- if is_out -%}(super){%- endif %} struct {{type_name -}}
     {%- for f in fields %}
     pub {{f.name}}: {{f.type_info.render(lifetime_env)}},
     {%- endfor %}
-} {%- else -%};{%- endif -%}
+} {%- else -%};{%- endif %}
+
+#[repr(C)]
+pub(crate) struct {{ type_name }}Abi {%- call draw_formatted_lifetimes(lifetimes) -%} {%- if fields.len() > 0 %} {
+    {% for f in fields %}
+    {{f.name}} : {{f.type_info.render_with_override(lifetime_env, f.abi_info)}},
+    {% endfor %}
+} {%- else -%};{%- endif %}
+
+impl {%- call draw_formatted_lifetimes(lifetimes) %} {{type_name}}Abi {%- call draw_formatted_lifetimes(lifetimes) %} {
+    fn from_ffi(self) -> {{type_name}}{%- call draw_formatted_lifetimes(lifetimes) -%} {
+        {{type_name}} {
+            {% for f in fields %}
+                {{f.name}}: {{f.wrap_convert()}},
+            {% endfor %}
+        }
+    }
+}
 {%- endblock -%}
 
 {%- block impl_generics -%}
